# DT4Safeguards

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: dummy_model.json  dummy_model_at_time_export.json  dummy_model_export.json
docs/: conf.py  index.rst
docs/.build/doctrees/: environment.pickle
docs/.build/html/_sources/: index.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
jupyter/: testnotebook.ipynb
project/: __about__.py  app.py  build.py
project/model/: components.py  container.py  facility.py  historyclass.py  holdingarea.py  monitoringsystem.py  room.py  units.py
project/projecttypes/: command.py  dimensions.py  location.py  transportcmd.py  units.py
tests/: test.py  test_dummy.py
