[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dt4safeguards"
description = 'Project files of Manuel Kreutle'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0"
authors = [
  { name = "manuel-k2", email = "m.kreutle@fz-juelich.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dash",
  "plotly",
  "pandas",
  "numpy",
  "xarray",
  "dataclasses",
  "typing",
  "pathlib"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/manuel-k2/DT4Safeguards#readme"
Issues = "https://github.com/manuel-k2/DT4Safeguards/issues"
Source = "https://github.com/manuel-k2/DT4Safeguards"

[tool.hatch.version]
path = "project/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=project --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "project/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.optional-dependencies]
test = [
  "xarray", "matplotlib",
  "pytest >= 6.0.0",
  "uncertainties >= 3.1.7"
]
docs = [
    "furo",  # Theme
    "myst_parser >=0.13",  # Markdown
    "sphinx >=4.0",
    "sphinx_copybutton",  # Easy code copy button
    "matplotlib", "xarray"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]
